New log and java configuration